// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show a hand after picking a card 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "188": true,
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "175": true,
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "117": true,
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "hand",
    "candidates": Object {
      "123456": Object {
        "contents": "Dropping a chandelier on your enemies and riding the rope up.",
        "id": 268,
      },
    },
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Gloryholes.",
          "id": 310,
        },
        Object {
          "contents": "A robust mongoloid.",
          "id": 444,
        },
        Object {
          "contents": "Boris the Soviet Love Hammer.",
          "id": 597,
        },
        Object {
          "contents": "Owlbear's tears.",
          "id": 640,
        },
        Object {
          "contents": "Asians being racist against each other.",
          "id": 714,
        },
        Object {
          "contents": "Having sex in the P.E. equipment shed.",
          "id": 748,
        },
        Object {
          "contents": "Hand-me-down adult diapers",
          "id": 1015,
        },
        Object {
          "contents": "Vomiting in the shower",
          "id": 1039,
        },
        Object {
          "contents": "An intellectually superior overlord",
          "id": 1040,
        },
      ],
      "game": "0-05526803409810505",
      "player": 123456,
    },
    "lead": Object {
      "id": 123456,
      "platform": "facebook",
    },
    "messages": Object {
      "123456": Array [
        Object {
          "payload": Object {
            "cards": Array [
              Object {
                "contents": "Gloryholes.",
                "id": 310,
              },
              Object {
                "contents": "A robust mongoloid.",
                "id": 444,
              },
              Object {
                "contents": "Boris the Soviet Love Hammer.",
                "id": 597,
              },
              Object {
                "contents": "Owlbear's tears.",
                "id": 640,
              },
              Object {
                "contents": "Asians being racist against each other.",
                "id": 714,
              },
              Object {
                "contents": "Having sex in the P.E. equipment shed.",
                "id": 748,
              },
              Object {
                "contents": "Hand-me-down adult diapers",
                "id": 1015,
              },
              Object {
                "contents": "Vomiting in the shower",
                "id": 1039,
              },
              Object {
                "contents": "An intellectually superior overlord",
                "id": 1040,
              },
            ],
          },
          "player": 123456,
          "type": "show-hand-message",
        },
      ],
    },
    "payload": Object {
      "game": "0-05526803409810505",
      "round": "0-05526803409810505",
    },
    "player": Object {
      "first_name": "Ray",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 123456,
      "platform": "facebook",
    },
    "round": Object {
      "candidates": Object {
        "123456": 268,
      },
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
    "unaddressedMessages": Array [
      Object {
        "payload": Object {
          "cards": Array [
            Object {
              "contents": "Gloryholes.",
              "id": 310,
            },
            Object {
              "contents": "A robust mongoloid.",
              "id": 444,
            },
            Object {
              "contents": "Boris the Soviet Love Hammer.",
              "id": 597,
            },
            Object {
              "contents": "Owlbear's tears.",
              "id": 640,
            },
            Object {
              "contents": "Asians being racist against each other.",
              "id": 714,
            },
            Object {
              "contents": "Having sex in the P.E. equipment shed.",
              "id": 748,
            },
            Object {
              "contents": "Hand-me-down adult diapers",
              "id": 1015,
            },
            Object {
              "contents": "Vomiting in the shower",
              "id": 1039,
            },
            Object {
              "contents": "An intellectually superior overlord",
              "id": 1040,
            },
          ],
        },
        "type": "show-hand-message",
      },
    ],
  },
}
`;

exports[`show a hand with pickable cards 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "268": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "188": true,
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "175": true,
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "117": true,
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "hand",
    "candidates": Object {},
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Dropping a chandelier on your enemies and riding the rope up.",
          "id": 268,
        },
        Object {
          "contents": "Gloryholes.",
          "id": 310,
        },
        Object {
          "contents": "A robust mongoloid.",
          "id": 444,
        },
        Object {
          "contents": "Boris the Soviet Love Hammer.",
          "id": 597,
        },
        Object {
          "contents": "Owlbear's tears.",
          "id": 640,
        },
        Object {
          "contents": "Asians being racist against each other.",
          "id": 714,
        },
        Object {
          "contents": "Having sex in the P.E. equipment shed.",
          "id": 748,
        },
        Object {
          "contents": "Hand-me-down adult diapers",
          "id": 1015,
        },
        Object {
          "contents": "Vomiting in the shower",
          "id": 1039,
        },
        Object {
          "contents": "An intellectually superior overlord",
          "id": 1040,
        },
      ],
      "game": "0-05526803409810505",
      "player": 123456,
    },
    "lead": Object {
      "id": 123456,
      "platform": "facebook",
    },
    "messages": Object {
      "123456": Array [
        Object {
          "payload": Object {
            "cards": Array [
              Object {
                "contents": "Dropping a chandelier on your enemies and riding the rope up.",
                "id": 268,
              },
              Object {
                "contents": "Gloryholes.",
                "id": 310,
              },
              Object {
                "contents": "A robust mongoloid.",
                "id": 444,
              },
              Object {
                "contents": "Boris the Soviet Love Hammer.",
                "id": 597,
              },
              Object {
                "contents": "Owlbear's tears.",
                "id": 640,
              },
              Object {
                "contents": "Asians being racist against each other.",
                "id": 714,
              },
              Object {
                "contents": "Having sex in the P.E. equipment shed.",
                "id": 748,
              },
              Object {
                "contents": "Hand-me-down adult diapers",
                "id": 1015,
              },
              Object {
                "contents": "Vomiting in the shower",
                "id": 1039,
              },
              Object {
                "contents": "An intellectually superior overlord",
                "id": 1040,
              },
            ],
            "game": "0-05526803409810505",
            "round": "0-05526803409810505",
          },
          "player": 123456,
          "type": "show-hand-for-picking-message",
        },
      ],
    },
    "payload": Object {
      "game": "0-05526803409810505",
      "round": "0-05526803409810505",
    },
    "player": Object {
      "first_name": "Ray",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 123456,
      "platform": "facebook",
    },
    "round": Object {
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
    "unaddressedMessages": Array [
      Object {
        "payload": Object {
          "cards": Array [
            Object {
              "contents": "Dropping a chandelier on your enemies and riding the rope up.",
              "id": 268,
            },
            Object {
              "contents": "Gloryholes.",
              "id": 310,
            },
            Object {
              "contents": "A robust mongoloid.",
              "id": 444,
            },
            Object {
              "contents": "Boris the Soviet Love Hammer.",
              "id": 597,
            },
            Object {
              "contents": "Owlbear's tears.",
              "id": 640,
            },
            Object {
              "contents": "Asians being racist against each other.",
              "id": 714,
            },
            Object {
              "contents": "Having sex in the P.E. equipment shed.",
              "id": 748,
            },
            Object {
              "contents": "Hand-me-down adult diapers",
              "id": 1015,
            },
            Object {
              "contents": "Vomiting in the shower",
              "id": 1039,
            },
            Object {
              "contents": "An intellectually superior overlord",
              "id": 1040,
            },
          ],
          "game": "0-05526803409810505",
          "round": "0-05526803409810505",
        },
        "type": "show-hand-for-picking-message",
      },
    ],
  },
}
`;
